# OpenGLTests

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert  cube.frag  cube.vert  singleColor.frag  textured.frag  textured.vert
src/: CMakeLists.txt  main.cpp
src/objects/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/objects/lighting/: AmbientLight.hpp  PointLight.cpp  PointLight.hpp
src/objects/primitives/: Cube.cpp  Cube.hpp
